add some social media accounts

--- a/data/blog/WWDC22.mdx
+++ b/data/blog/WWDC22.mdx
@@ -1,7 +1,7 @@
 ---
-title: WWDC 2022 Wishlist
+title: WWDC 2022 i wish 
 date: '2022-06-05'
-tags: ['tech', 'apple']
+tags: ['fof', 'apple']
 draft: false
 summary: Even though I don't use any of their products myself, here's the features I hope Apple will announce.
 ---
