add my frist blog

--- a/data/blog/hello-world!.mdx
+++ b/data/blog/hello-world!.mdx
@@ -8,8 +8,9 @@ summary: Welcome to my first ever blog post!.
 <img
   className="inline rounded-lg"
   src="/static/images/Blog/first-blog.jpg"
-  alt="First blog"
+  alt="frist blog"
 />
+ 
 I’m Fady, a creative, multi-passionate engineer. I’m starting a blog, highly inspired by several cool people I’ve come across fairly recently. 😎
 
 Firstly, this blog will be personal, a little corner of the internet that I can add to and grow up with.
