--- a/data/blog/hello-world!.mdx
+++ b/data/blog/hello-world!.mdx
@@ -1,5 +1,5 @@
 ---
-title: why I'm starting a blog and other things about me.
+title: Share your work - why I'm starting a blog.
 date: '2022-07-20'
 tags: [frist blog]
 draft: false
